--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,21 @@
+   .round {
+       border-radius: 100px;
+   }
+
+.u-b {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.mx-20 {
+    margin: 0 20px 0 20px;
+}
+
+.px-20 {
+    padding: 0 20px 0 20px;
+}
+
+
 .wh-100 {
     width: 100%;
     height: 100%;
@@ -5,6 +23,14 @@
 
 .bg-30 {
     background-color: rgba(0,0,0,0.3);
+}
+
+.bg-30-l {
+    background-color: rgba(255, 255, 255, 0.3);
+}
+
+.bg-50-l {
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .bg-50 {
