--- a/css/style.css
+++ b/css/style.css
@@ -1629,7 +1629,7 @@ nav.navbar .btn-lg .icon-position-right {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    text-align: center;
+    /*text-align: center;*/
     bottom: 0;
     padding: 0;
 }
