--- a/css/index.css
+++ b/css/index.css
@@ -27,9 +27,9 @@
     opacity: 1;
 }
 
-#desc-fluid-card-4col {
-    background: #96d4e9;
-}
+/*#desc-fluid-card-4col {*/
+/*    background: #96d4e9;*/
+/*}*/
 
 #gallery-carousel-2 {
     background: #111111;
